1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtoolsgui.h (ControlPanel, ActionCache, CommonProbeDisplay,
	SimpleProbeDisplay, CompleteProbeDisplay): Switch from CREATABLE
	to RETURNABLE.
	(SingleProbeDisplay, GUIComposite): Remove CREATABLE.
	(GUISwarm): Add ActionCache and ControlPanel return typing
	to getters.

1999-08-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbeWidget.m ([VarProbeWidget -package:], [VarProbeWidget
	-Spawn:]): Use probeObject: instead of probeRaw:

1999-08-11  Alex Lancaster  <alex@santafe.edu>

	* ClassDisplayWidget.m ([ClassDisplayWidget -createEnd]): When
	setting the title of the ClassDisplayLabel instance, if the class
	of the probed object is the highest in the hierarchy, get the
	class name of the probed instance, otherwise use the current class
	name in hierarchy.

	* SingleProbeDisplay.m ([SingleProbeDisplay -getId:]): Call
	getName, rather than getIdName on the object instance to retrieve
	the class name.

1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbeWidget.m ([MessageProbeWidget -dynamic]): Use STRDUP
	instead of strdup.

	* MultiVarProbeWidget.m ([MultiProbe -update]): Likewise.

1999-07-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ProbeDisplayManager.m: Import directory.h instead of declaring
	java_get_swarm_class.  Always use (renamed)
	swarm_directory_get_swarm_class instead of java_get_swarm_class;
	remove HAVE_JDK conditionals.

	* Makefile.am (INCLUDES): Add JAVAINCLUDES.

1999-07-27  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ProbeDisplayManager.m: Rename java_get_class_from_objc_object
	to java_get_swarm_class.

1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* simtoolsgui.h: Make CommonProbeDisplay protocol CREATABLE.
	Make SingleProbeDisplay protocol CREATABLE.
	Add SimpleProbeDisplay protocol and make it CREATABLE.

	* ProbeDisplayManager.m: Declare as extern 
	java_get_class_from_objc_object.